# ChangeLog for app-crypt/md5deep
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.44 2009/01/25 14:13:09 nyhm Exp $

*md5deep-3.2 (25 Jan 2009)

  25 Jan 2009; Tristan Heaven <nyhm@gentoo.org>
  +files/md5deep-3.2-as-needed.patch, +md5deep-3.2.ebuild:
  Version bump

  10 Dec 2008; Tristan Heaven <nyhm@gentoo.org>
  files/md5deep-3.1-as-needed.patch:
  Fix linking with --as-needed, bug #246865

*md5deep-3.1 (07 Dec 2008)

  07 Dec 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/md5deep-3.1-as-needed.patch, +md5deep-3.1.ebuild:
  Version bump

*md5deep-3.0 (11 May 2008)

  11 May 2008; Tristan Heaven <nyhm@gentoo.org>
  +files/md5deep-3.0-install.patch, +md5deep-3.0.ebuild:
  Version bump

  04 Feb 2008; Fabian Groffen <grobian@gentoo.org> md5deep-1.13.ebuild,
  md5deep-2.0.1.ebuild, md5deep-2.0.1-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  02 Feb 2008; Christoph Mende <angelos@gentoo.org> md5deep-2.0.1-r1.ebuild:
  Stable on amd64, bug #208035

  30 Jan 2008; Raúl Porcel <armin76@gentoo.org> md5deep-2.0.1-r1.ebuild:
  sparc stable wrt #208035

  30 Jan 2008; Dawid Węgliński <cla@gentoo.org> md5deep-2.0.1-r1.ebuild:
  Stable on x86 (bug #208035)

  29 Jan 2008; nixnut <nixnut@gentoo.org> md5deep-2.0.1-r1.ebuild:
  Stable on ppc wrt bug 208035

*md5deep-2.0.1-r1 (04 Dec 2007)

  04 Dec 2007; Tristan Heaven <nyhm@gentoo.org>
  +files/md5deep-2.0.1-install.patch, +md5deep-2.0.1-r1.ebuild:
  Fix man page installation, bug #201134

*md5deep-2.0.1 (28 Nov 2007)

  28 Nov 2007; Tristan Heaven <nyhm@gentoo.org> +md5deep-2.0.1.ebuild:
  Version bump, bug #200663

  28 Sep 2007; Markus Meier <maekke@gentoo.org> md5deep-1.13.ebuild:
  x86 stable, bug #194000

  28 Sep 2007; nixnut <nixnut@gentoo.org> md5deep-1.13.ebuild:
  Stable on ppc wrt bug 194000

  28 Sep 2007; Christoph Mende <angelos@gentoo.org> md5deep-1.13.ebuild:
  Stable on amd64 wrt bug #194000
