@@ -6,9 +6,11 @@ DIST md5deep-2.0.1-001.tar.gz 203211 RMD160 13646aa1b85f56988d3079c9c4686dcedd89
 DIST md5deep-3.0.tar.gz 233803 RMD160 e9b1a2b10c906694834f0e367b1963cc5b7a5d65 SHA1 50a439b08a911e804f0acae30607a2f8940f0d99 SHA256 7af9ca3b271434713b1051776807c570d127a77743c818aef93232800e2201f4
 DIST md5deep-3.1.tar.gz 224897 RMD160 1358f04890aa64c158f962a55e9474241f330aac SHA1 aa9743023fa53c7e8d9ed99558684d1d08b3188a SHA256 fdcfaa469923248b0412b4a1afab39f5c26ea778edaab51af2d97eed46bcf2af
 DIST md5deep-3.2.tar.gz 246921 RMD160 64d18a82c7a4445e06a243bc6bfe703b4269a44c SHA1 f5016ef3397fd541dca9fcfd70a0660ab5ecdcad SHA256 c2025a3edac4fd7f5f23d084da064324c6f3dcb465a34554786e31730c658334
+DIST md5deep-3.3.tar.gz 247327 RMD160 a3a85d7d713452278a796249d481d3a244d3eee8 SHA1 7a91c15d46d5298a9039e44fed26671c2c8dc770 SHA256 0ecfd1c067a4c73a2de19eb57eef12f882f18a845f2a564392868ed47ee5b343
 EBUILD md5deep-2.0.1-r1.ebuild 778 RMD160 243d293ff195a374973cf5c99b6e58810ae2e591 SHA1 3e96246a238c8307d892ecafe6e0fa666b49a8ad SHA256 8095629879309b7941ab4cb68a7ab585e1444261e08207282274179f1a4da69f
 EBUILD md5deep-3.0.ebuild 731 RMD160 06f5f22cd52917161bd7fc1a2682b97b88fccbea SHA1 52942efcfa596d458447ef269bc7dae8f0518cb1 SHA256 ecd410e92e5946f1b0d2bf7d0c771a692ede414291e5019284313d42c29db760
 EBUILD md5deep-3.1.ebuild 733 RMD160 2e264c2706869eb8c19937951f68c19b44f58ab0 SHA1 4c52a881467bfaa6f45948d278b1da1ef4570a77 SHA256 84eb3d9f05d3b0162671ff47e17c749f10c563e7b21df345272cc1b2709d1264
 EBUILD md5deep-3.2.ebuild 739 RMD160 d41d4ee4bd0944462ad176f8130af1cebf328e52 SHA1 e68a889538530c6b02aa0e2ec8b0e8e8f58471bd SHA256 4028a8ea49c517355c3268653034a2143f604c7cdaafb4ee1110d7851884d6a3
-MISC ChangeLog 5353 RMD160 f4580c6c71e17c8a31170e6001cc98aaf06705c5 SHA1 953e5b3f94f96de7e3bbbe97bccc05de5fb0c93f SHA256 c10825c0086e091fb88b459d0f28ef217ee8bbdd7bf421c3124b4316797887f5
+EBUILD md5deep-3.3.ebuild 615 RMD160 3bf9eccef8d78b04ef2858c6f86bd7569d4b0cef SHA1 640f527b72d6e5fd3fdfb263e7e29d989df5f55e SHA256 a4745ca17cc52baaad8da626cf6e6079083e9f4cb0a269895ab48f0a703759a6
+MISC ChangeLog 5466 RMD160 2724de1be5a1cdbd8d4255ba16af10437c768138 SHA1 5b3c1eaa8ad64ce00a54dad5ae260a96865ec127 SHA256 06e553159fd9c09b3eaf07faa47fd3621e4cf898cac343d54775cf57556cf950
 MISC metadata.xml 253 RMD160 33155d552badd3133f93e25bfcd82b62d296deb9 SHA1 b30245f00aae656e7a024b2ab4b8ad8e5549250f SHA256 2ddc2634b7e897546998869bcf0803bfbf4940cb75da9e45a2a8f421b4dabfd3
