@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/md5deep
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.44 2009/01/25 14:13:09 nyhm Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/md5deep/ChangeLog,v 1.45 2009/04/04 15:17:49 nyhm Exp $
+
+*md5deep-3.3 (04 Apr 2009)
+
+  04 Apr 2009; Tristan Heaven <nyhm@gentoo.org> +md5deep-3.3.ebuild:
+  Version bump
 
 *md5deep-3.2 (25 Jan 2009)
 
